--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* ===================== */
 /* COMMOM CSS */
 body{
     background: #f1f1f1;
@@ -28,11 +27,8 @@ h2.page-heading{
   border-bottom: 2px solid #333;
 }
 
-/* ===================== */
 
-/* ===================== */
 /* ADMIN Panel CSS START */
-/* ===================== */
 
 #wrapper-admin{
     padding: 100px 0 0;
@@ -173,13 +169,10 @@ form{
     box-shadow:0 1px 3px rgba(0, 0, 0, 0.13);
 }
 
-/* ===================== */
-/* ADMIN Panel CSS END */
-/* ===================== */
 
-/* ===================== */
+
 /* FrontEnd CSS START */
-/* ===================== */
+
 
 /* Header Styling */
 #header{
@@ -255,9 +248,9 @@ form{
 #main-content .post-content .post-img:hover{
   border: 3px solid #1e90ff;
 }
-#main-content .post-content .inner-content{
+/* #main-content .post-content .inner-content{
     /* border: 1px solid #000; */
-}
+/* } */ */
 
 #main-content .post-content h3{
     font-size: 21px;
